--- a/index.html
+++ b/index.html
@@ -6,22 +6,57 @@
 <body>
     <h2>Simple Calculator</h2>
     <form>
-        <label for="input1">Input 1:</label>
-        <input type="number" id="input1">
+        <label for="inputA">A) Total houses on block:</label>
+        <input type="number" id="inputA">
         <br>
-        <label for="input2">Input 2:</label>
-        <input type="number" id="input2">
+        <label for="inputB">B) Initial percent vacant (0-100):</label>
+        <input type="number" id="inputB">
+        <br>
+        <label for="inputC">C) Final percent vacant (0-100):</label>
+        <input type="number" id="inputC">
+        <br>
+        <label for="inputD">D) Cost/house to renovate:</label>
+        <input type="number" id="inputD">
         <br>
         <button type="button" onclick="calculate()">Calculate</button>
     </form>
-    <h3>Result: <span id="result"></span></h3>
+    <h3>X) Total cost to renovate: <span id="outputX"></span></h3>
+    <h3>Y) Total home value increase: <span id="outputY"></span></h3>
 
     <script>
+        // Placeholder function for F(p) - replace this with your actual lookup table logic
+        function F(p) {
+            // Example lookup table
+            const lookupTable = {
+                0: 190000,
+                5: 140000,
+                10: 100000,
+                15: 80000,
+                20: 75000,
+                25: 70000,
+                30: 67000,
+                35: 64000,
+                40: 58000,
+                45: 50000
+            };
+            return lookupTable[p] || 0;
+        }
+
         function calculate() {
-            var input1 = parseFloat(document.getElementById('input1').value);
-            var input2 = parseFloat(document.getElementById('input2').value);
-            var result = input1 - input2; // Replace with your function
-            document.getElementById('result').textContent = result;
+            var A = parseInt(document.getElementById('inputA').value);
+            var B = parseInt(document.getElementById('inputB').value);
+            var C = parseInt(document.getElementById('inputC').value);
+            var D = parseInt(document.getElementById('inputD').value);
+
+            // Calculate X
+            var X = A * (B - C) / 100 * D;
+
+            // Calculate Y
+            var Y = A * (F(C) - F(B));
+
+            // Display results
+            document.getElementById('outputX').textContent = X.toFixed(2);
+            document.getElementById('outputY').textContent = Y.toFixed(2);
         }
     </script>
 </body>
