--- a/index.html
+++ b/index.html
@@ -33,19 +33,18 @@
     <script>
         // Improved lookup function with interpolation
         function F(p) {
-            // Example lookup table
-            const lookupTable = {
-                0: 0,
-                10: 0.1,
-                20: 0.2,
-                30: 0.3,
-                40: 0.4,
-                50: 0.5,
-                60: 0.6,
-                70: 0.7,
-                80: 0.8,
-                90: 0.9,
-                100: 1
+            // lookup table for avg house value based on block percent vacancy
+            cconst lookupTable = {
+                0: 190000,
+                5: 140000,
+                10: 100000,
+                15: 80000,
+                20: 75000,
+                25: 70000,
+                30: 67000,
+                35: 64000,
+                40: 58000,
+                45: 50000
             };
             
             // Find the nearest keys
