Fixed bug -- typo in LUT declaration

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         // Improved lookup function with interpolation
         function F(p) {
             // lookup table for avg house value based on block percent vacancy
-            cconst lookupTable = {
+            const lookupTable = {
                 0: 190000,
                 5: 140000,
                 10: 100000,
