--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Online Calculator</title>
+    <title>Block Rehabilitation Value Calculator</title>
     <style>
         .output-box {
             text-align: right;
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h2>Simple Calculator</h2>
+    <h2>Block Rehabilitation Value Calculator</h2>
     <form>
         <label for="inputA">A) Total houses on block:</label>
         <input type="number" id="inputA">
