Added note about an assumption about the data used for model

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     </form>
     <h3>X) Total cost to renovate: <span id="outputX" class="output-box"></span></h3>
     <h3>Y) Total home value increase: <span id="outputY" class="output-box"></span></h3>
+    
+    <p>
+        Based on average sale price values approximated from the figure on page 25 of the Whole Blocks Report.<br><br>
+        <strong>Note:</strong> This model assumes the average sale price from the cited figure is for all houses on the block (vacants included). If instead it is only for the sale price of nonvacant houses on these blocks, this calculator must be modified to reflect that.
+    </p>
 
     <script>
         // Improved lookup function with interpolation
