--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             display: inline-block;
             width: 200px; /* Adjust the width as needed */
         }
+        .divider {
+            margin: 20px 0;
+            border-bottom: 1px solid #ccc;
+        }
     </style>
 </head>
 <body>
@@ -30,9 +34,12 @@
     <h3>X) Total cost to renovate: <span id="outputX" class="output-box"></span></h3>
     <h3>Y) Total home value increase: <span id="outputY" class="output-box"></span></h3>
     
+    <div class="divider"></div>
+
     <p>
-        Based on average sale price values approximated from the figure on page 25 of the Whole Blocks Report.<br><br>
-        <strong>Note:</strong> This model assumes the average sale price from the cited figure is for all houses on the block (vacants included). If instead it is only for the sale price of nonvacant houses on these blocks, this calculator must be modified to reflect that.
+        Based on average sale price values approximated from the figure on page 25 of the Whole Blocks Report.<br>
+        <strong>Note:</strong> This model assumes the average sale price from the cited figure is for all houses on the block (vacants included).<br>
+        If instead it is only for the sale price of nonvacant houses on these blocks, this calculator must be modified to reflect that.
     </p>
 
     <script>
