Updated box labels to clarify output

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <br>
         <button type="button" onclick="calculate()">Calculate</button>
     </form>
-    <h3>X) Total cost to renovate: <span id="outputX" class="output-box"></span></h3>
-    <h3>Y) Total home value increase: <span id="outputY" class="output-box"></span></h3>
+    <h3>X) Total cost to renovate vacants: <span id="outputX" class="output-box"></span></h3>
+    <h3>Y) Total home value increase for block: <span id="outputY" class="output-box"></span></h3>
     
     <div class="divider"></div>
 
